--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  height: 100vh;
-  background: linear-gradient(to bottom, purple, skyblue);
+  height: auto;
+  background-color: #f8f8f8;
+  line-height: 2;
 }
-
