--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -13,9 +13,10 @@
   font: 700;
   font-size: 2.5rem;
   width: 60%;
+  margin-left: 5rem;
 }
 
-.hero button{
+.hero button {
   background: transparent;
   border: 2px solid #444;
   color: #444;
