--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -33,3 +33,47 @@
   color: #fff;
   font-weight: 500;
 }
+
+.toggle {
+  display: flex;
+  flex-direction: column;
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid #fff;
+  padding: 4px 0;
+  border-radius: 0.4rem;
+  display: none;
+}
+
+.toggle span {
+  display: block;
+  width: 70%;
+  height: 0.2rem;
+  background-color: #fff;
+  margin: 2px auto;
+  border-radius: 0.5rem;
+}
+
+.collapse {
+  display: none;
+  width: 2rem;
+  height: 2rem;
+  position: relative;
+}
+
+.collapse span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 0.2rem;
+  background-color: #fff;
+  margin: 20px auto;
+}
+
+.collapse span:first-child {
+  transform: rotate(55deg);
+}
+
+.collapse span:last-child {
+  transform: rotate(-55deg);
+}
