--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #444;
+  max-width: 1360px;
+  overflow-x: hidden;
+  width: 100vw;
+  height: 100%;
 }
