--- a/src/App.css
+++ b/src/App.css
@@ -42,14 +42,19 @@
   .hero {
     flex-direction: column;
     align-items: center;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 5rem !important;
   }
 
   .hero .info {
     padding: 0;
     margin: 0;
     line-height: 1.5;
+  }
+
+  .hero img {
+    width: 300px !important;
+    height: 300px;
+    margin-bottom: 5rem !important;
   }
 
   .myInfo {
@@ -92,8 +97,8 @@
   }
 
   .hero img {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
   }
 
   .form {
